--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,6 +32,10 @@
       type="text/css"
       href="./assets/css/loading-bar.css"
     />
+     <!-- Font Awesome -->
+     <script src="https://kit.fontawesome.com/66fb9cbaef.js" crossorigin="anonymous"></script>
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+     
     <script type="text/javascript" src="./assets/js/loading-bar.js"></script>
     <title>React App</title>
   </head>
