rearrange table, remove id

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,7 +37,7 @@
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
      
     <script type="text/javascript" src="./assets/js/loading-bar.js"></script>
-    <title>React App</title>
+    <title>Trend Health</title>
   </head>
   <body>
     <noscript>
